# capture

./: .gitignore  CMakeLists.txt  README.md
config/: config.txt
include/: analysis.h  capture.h  utils.h
src/: analysis.c  capture.c  main.c  utils.c
